PUT & DELETE implementation
