# app/v1/model/db_schemas/db_schema.py
@@ -11,15 +11,15 @@ class ProductEssential(BaseModel):
     brand_id:    Optional[str] = None       # id for the brand of the product
     price:       float                      # Price of the product
     weight:      Optional[float] = None     # Weight of the product
-    created_at:  datetime                   # Date and time the product was created
+    created_at:  str                   # Date and time the product was created
 
     model_config = ConfigDict(
     from_attributes=True,
     )
 
 class Product(ProductEssential):
-    product_id:  str                        # Unique identifier for the product
-    updated_at:  datetime                   # Date and time the product was last updated
+    ID:  str                                         # Unique identifier for the product
+    updated_at:  Optional[str] = None    
 
     model_config = ConfigDict(
     from_attributes=True,
